--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "npm": "^10.9.2"
+    "npm": "^10.9.2",
+    "sqlite3": "^5.1.7"
   }
 }
